# classyfire

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug.md  performance.md  question.md
classyfire/: config.py  database.py  i18n.py  main.py
classyfire/components/: app.py  filters.py  single.py  sort.py  table.py
classyfire/scripts/: import_csv.py
