[project]
name = "classyfire"
dynamic = ["version"]
description = "Classy research articles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "tinydb>=4.8.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["setuptools>=80.9.0", "setuptools_scm[toml]>=9.2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["classyfire"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
preview = true

[tool.codespell]
skip = 'uv.lock,classyfire/i18n.py'
